--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "prisma-api-blog",
   "version": "0.1.0",
   "scripts": {
-    "start": "ts-node server.ts",
+    "dev": "ts-node server.ts",
     "build": "tsc --build",
-    "clean": "tsc --build --clean"
+    "clean": "tsc --build --clean",
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
